# pals-in-rust

./: .gitignore  Cargo.toml  README.md
aes/: Cargo.toml
aes/src/: lib.rs
pals/: Cargo.toml
pals/src/: main.rs  set1.rs  set2.rs
src/: main.rs  pals.rs  twist.rs
twist/: Cargo.toml
twist/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
xor/: Cargo.toml
xor/src/: lib.rs
